--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,98 @@
 
 body {
     font-family: var(--default-font-family);
+    margin: 0 auto;
 }
 
+h1,h2,h3 {
+    text-align: center;   
+}
+
+h1 {
+    font-size: 65px;
+    line-height: 96px;
+}
+
+h2 {
+    font-size: 45px;
+}
+
+p {
+    font-size: 18px;
+}
+footer {
+    text-align: center;
+    background: var(--2nd-color);
+    color: var(--4th-color);
+    padding: 24px;
+}
+
+
+footer p a {
+    color: var(--3rd-color);
+    text-decoration: none;
+}
+
+footer p a:hover {
+    color: var(--3rd-color);
+}
+.navbar {
+    background: var(--2nd-color);
+    padding: 0px;
+}
 .logo {
-    max-width: 100px;
+    max-width: 150px;
     margin: 10px;
 }
 
-.nav-link a:hover {
-    cursor: pointer;
+.hero {
+    padding: 250px 50px 125px;
+    background: var(--4th-color);
+    color: var(--2nd-color);
+    text-align: center;
+}
+.hero-btn {
+    border: 1px solid var(--3rd-color);
+    border-radius: 4px;
+    background: var(--2nd-color);
+    color: var(--4th-color);
+    font-size: 25px;
+    padding: 20px 35px;
+    box-shadow: 2px 2px 3px var(--1st-color);
+}
+
+.hero-btn:hover {
+    cursor:pointer;
+    background: var(--4th-color);
+    color: var(--3rd-color);
+}
+
+.skills {
+    background: var(--3rd-color);
+    padding: 90px 50px;
+}
+
+.skills-img {
+    max-width: 150px;
+}
+
+
+.social-icon {
+    font-size: 50px;
+    color: var(--3rd-color);
+    margin: 10px;
+}
+.reference {
+    font-size: 16px;
+}
+
+.footer-text {
+    font-size: 16px;
+}
+
+
+
+.footer-text a {
+    color: var(--3rd-color);
+    text-decoration: none;
 }
