--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,10 @@ footer p a:hover {
     background: var(--2nd-color);
     padding: 0px;
 }
+
+.nav-link:hover {
+    cursor: pointer;
+}
 .logo {
     max-width: 150px;
     margin: 10px;
@@ -90,6 +94,10 @@ footer p a:hover {
     color: var(--3rd-color);
     margin: 10px;
 }
+.social-icon:hover {
+    cursor: pointer;
+}
+
 .reference {
     font-size: 16px;
 }
@@ -98,9 +106,48 @@ footer p a:hover {
     font-size: 16px;
 }
 
-
-
 .footer-text a {
     color: var(--3rd-color);
     text-decoration: none;
+}
+
+@media (max-width:750px) {
+ h1 {
+    font-size: 45px;
+ }
+
+ h2 {
+    font-size: 30px;
+ }
+
+ footer {
+    padding: 30px;
+ }
+
+ footer p {
+    font-size: 15px;
+ }
+
+.navbar {
+    padding: 0px;
+ }
+
+.hero {
+    padding: 110px 50px 50px;
+}
+.skills {
+    padding: 40px 40px;
+}
+
+ .skills-img {
+    width: 100px;
+ }
+
+ .footer-text {
+    font-size: 14px;
+ }
+
+ .social-icon {
+    font-size: 30px;
+ }
 }
