--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ footer p a:hover {
 
 .logo {
     margin: 0px;
-    max-width: 50px;
+    max-width: 100px;
  }
 
 .hero {
@@ -154,6 +154,7 @@ footer p a:hover {
 
 .skills-img {
     width: 50px;
+    display: flex;
     text-align: center;
  }
 
