final mobile friendly modification

--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ footer p a:hover {
     padding: 10px 20px;
 }
 .skills {
-    padding: 50px;
+    padding: 50px 50px 50px 50px;
 }
 
 .skills-img {
