--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     margin: 0 auto;
 }
 
-h1,h2,h3 {
+h1,h2, h3 {
     text-align: center;   
 }
 
@@ -25,6 +25,10 @@ h2 {
     font-size: 45px;
 }
 
+
+h3 {
+    font-size: 35px;
+}
 p {
     font-size: 18px;
 }
@@ -58,13 +62,13 @@ footer p a:hover {
     margin: 10px;
 }
 
-.hero {
+.hero-homepage {
     padding: 250px 50px 125px;
     background: var(--4th-color);
     color: var(--2nd-color);
     text-align: center;
 }
-.hero-btn {
+.hero-btn-homepage {
     border: 1px solid var(--3rd-color);
     border-radius: 4px;
     background: var(--2nd-color);
@@ -74,7 +78,7 @@ footer p a:hover {
     box-shadow: 2px 2px 3px var(--1st-color);
 }
 
-.hero-btn:hover {
+.hero-btn-homepage:hover {
     cursor:pointer;
     background: var(--4th-color);
     color: var(--3rd-color);
@@ -90,7 +94,6 @@ footer p a:hover {
     display: inline;
 }
 
-
 .social-icon {
     font-size: 50px;
     color: var(--3rd-color);
@@ -98,10 +101,6 @@ footer p a:hover {
 }
 .social-icon:hover {
     cursor: pointer;
-}
-
-.reference {
-    font-size: 16px;
 }
 
 .footer-text {
@@ -113,6 +112,50 @@ footer p a:hover {
     text-decoration: none;
 }
 
+.hero-about {
+    padding: 250px 50px 125px;
+    background: var(--4th-color);
+    color: var(--2nd-color);
+    text-align: center;
+}
+
+.hero-about p {
+    font-size: 20px;
+}
+.profile-img {
+    max-width: 250px;
+    border-radius: 5px;
+    border: 2px solid var(--3rd-color);
+    box-shadow: 2px 2px 2px solid var(--3rd-color);
+}
+
+.hero-contact {
+    padding: 240px 50px 240px 50px;
+    background: var(--4th-color);
+    color: var(--2nd-color);
+    text-align: center;
+}
+
+.email {
+    color: var(--3rd-color);
+    text-decoration: none;
+    max-width: fit-content;
+}
+
+.email:hover {
+    color: var(--3rd-color);
+}
+
+.social-icons-contact {
+    font-size: 100px;
+    color: var(--3rd-color);
+    margin: 10px;
+    text-align: center;
+}
+.social-icons-contact:hover {
+    cursor: pointer;
+}
+
 @media (max-width:750px) {
  h1 {
     font-size: 35px;
@@ -120,6 +163,10 @@ footer p a:hover {
 
  h2 {
     font-size: 20px;
+ }
+
+ h3 {
+    font-size: 15px;
  }
 
  footer {
@@ -141,11 +188,11 @@ footer p a:hover {
     max-width: 120px;
  }
 
-.hero {
+.hero-homepage {
     padding: 110px 50px 50px 50px;
 }
 
-.hero-btn {
+.hero-btn-homepage {
     font-size: 18px;
     padding: 10px 20px;
 }
@@ -164,6 +211,24 @@ footer p a:hover {
  }
 
 .social-icon {
-    font-size: 30px;
+    font-size: 35px;
+    margin: 10px;
+ }
+
+ .social-icons-contact {
+    font-size: 25px;
+    margin: 10px;
+ }
+
+ .profile-img {
+    display: none;
+ }
+
+ .about-text {
+    font-size: 15px;
+ }
+
+ .email {
+    font-size: 15px;
  }
 }
