--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,10 @@ h2 {
 h3 {
     font-size: 35px;
 }
+
+h5 {
+    font-size: 25px;
+}
 p {
     font-size: 18px;
 }
@@ -156,6 +160,26 @@ footer p a:hover {
     cursor: pointer;
 }
 
+.hero-portfolio {
+    padding: 150px 50px 150px;
+    background: var(--4th-color);
+    color: var(--2nd-color);
+    text-align: center;
+}
+
+
+.card {
+    background: var(--2nd-color);
+    color: var(--4th-color);
+    border: 2px solid var(--3rd-color);
+}
+
+.card-img-top {
+    border-radius: 10px;
+}
+
+
+
 @media (max-width:750px) {
  h1 {
     font-size: 35px;
@@ -166,6 +190,10 @@ footer p a:hover {
  }
 
  h3 {
+    font-size: 15px;
+ }
+
+ h5 {
     font-size: 15px;
  }
 
@@ -230,5 +258,9 @@ footer p a:hover {
 
  .email {
     font-size: 15px;
+ }
+
+ .card-text {
+    font-size: 13px;
  }
 }
