--- a/styles.css
+++ b/styles.css
@@ -167,11 +167,20 @@ footer p a:hover {
     text-align: center;
 }
 
+.projects {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 50px 0 100px;
+    flex-wrap: wrap;
+  }
 
 .card {
     background: var(--2nd-color);
     color: var(--4th-color);
     border: 2px solid var(--3rd-color);
+    min-width: 320px;
+    max-width: 360px;
+    margin: 20px 10px;
 }
 
 .card-img-top {
